--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -1,4 +1,5 @@
 {
+    "news": "الاخبار",
     "rfid": {
         "TAG_ID_NOT_FOUND": "لم يتم العثور على ملصق ",
         "MORE_THAN_TAG_ID_FOUND": "تم العثور على اكثر من ملصق"
